--- a/feature-home-ui/src/main/res/xml/root_preferences.xml
+++ b/feature-home-ui/src/main/res/xml/root_preferences.xml
@@ -18,6 +18,10 @@
             app:key="theme"
             app:title="@string/dark_mode" />
 
+        <SwitchPreferenceCompat
+            app:key="alarm"
+            app:title="@string/disable_all" />
+
         <Preference
             app:key="clear"
             app:title="@string/clear" />
