--- a/core-ui/src/main/res/drawable/custom_edittext_selected.xml
+++ b/core-ui/src/main/res/drawable/custom_edittext_selected.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/white"/>
-    <stroke android:width="1dp" android:color="?colorAccent" />
+    <solid android:color="?attr/colorBackgroundVariant" />
+    <stroke
+        android:width="1dp"
+        android:color="?attr/colorAccent" />
     <corners
         android:bottomRightRadius="8dp"
         android:bottomLeftRadius="8dp"
         android:topLeftRadius="8dp"
-        android:topRightRadius="8dp"/>
+        android:topRightRadius="8dp" />
 </shape>
