--- a/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
@@ -1,75 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottomSheet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorBackground">
+    android:background="?attr/colorBackground"
+    tools:theme="@style/AppTheme.Dark">
 
-        <View
-            android:id="@+id/filterBottomSheetView"
-            android:layout_width="@dimen/bottom_sheet_bottom_view_width"
-            android:layout_height="4dp"
-            android:alpha="0.3"
-            android:background="@drawable/bottom_sheet_view"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <View
+        android:id="@+id/filterBottomSheetView"
+        android:layout_width="@dimen/bottom_sheet_bottom_view_width"
+        android:layout_height="4dp"
+        android:alpha="0.3"
+        android:background="@drawable/bottom_sheet_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/titleTextView"
-            style="@style/AppTheme.Text.Title.H3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/default_margin"
-            android:text="@string/add_new_filter"
-            app:layout_constraintTop_toBottomOf="@id/filterBottomSheetView" />
+    <TextView
+        android:id="@+id/titleTextView"
+        style="@style/AppTheme.Text.Title.H3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/default_margin"
+        android:text="@string/add_new_filter"
+        app:layout_constraintTop_toBottomOf="@id/filterBottomSheetView" />
 
-        <EditText
-            android:id="@+id/filterEditText"
-            style="@style/AppTheme.Text.Description.H3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/default_margin"
-            android:background="@drawable/custom_edittext_selector"
-            android:hint="@string/enter_filter"
-            android:inputType="text|textNoSuggestions"
-            android:paddingStart="@dimen/default_margin"
-            android:paddingTop="@dimen/edit_text_padding"
-            android:paddingEnd="@dimen/default_margin"
-            android:paddingBottom="@dimen/edit_text_padding"
-            android:singleLine="true"
-            app:layout_constraintTop_toBottomOf="@id/titleTextView" />
+    <EditText
+        android:id="@+id/filterEditText"
+        style="@style/AppTheme.Text.Description.H3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/default_margin"
+        android:background="@drawable/custom_edittext_selector"
+        android:hint="@string/enter_filter"
+        android:inputType="text|textNoSuggestions"
+        android:paddingStart="@dimen/default_margin"
+        android:paddingTop="@dimen/edit_text_padding"
+        android:paddingEnd="@dimen/default_margin"
+        android:paddingBottom="@dimen/edit_text_padding"
+        android:singleLine="true"
+        android:textColorHint="?attr/colorDivider"
+        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
-        <TextView
-            android:id="@+id/descriptionTextView"
-            style="@style/AppTheme.Text.Description.H4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/default_margin"
-            android:text="@string/filter_description"
-            app:layout_constraintTop_toBottomOf="@id/filterEditText" />
+    <TextView
+        android:id="@+id/descriptionTextView"
+        style="@style/AppTheme.Text.Description.H4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/default_margin"
+        android:text="@string/filter_description"
+        app:layout_constraintTop_toBottomOf="@id/filterEditText" />
 
-        <View
-            android:id="@+id/dividerView"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/bottom_sheet_bottom_space"
-            app:layout_constraintBottom_toBottomOf="@id/filterAddButton"
-            app:layout_constraintTop_toTopOf="@id/descriptionTextView" />
+    <View
+        android:id="@+id/dividerView"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bottom_sheet_bottom_space"
+        app:layout_constraintBottom_toBottomOf="@id/filterAddButton"
+        app:layout_constraintTop_toTopOf="@id/descriptionTextView" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/filterAddButton"
-            style="@style/AppTheme.MaterialButton"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/material_button_height"
-            android:text="@string/add"
-            app:icon="@drawable/ic_add"
-            app:iconGravity="textStart"
-            app:layout_constraintTop_toBottomOf="@id/dividerView" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/filterAddButton"
+        style="@style/AppTheme.MaterialButton"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/material_button_height"
+        android:text="@string/add"
+        app:icon="@drawable/ic_add"
+        app:iconGravity="textStart"
+        app:layout_constraintTop_toBottomOf="@id/dividerView" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="16dp"
-            app:layout_constraintTop_toBottomOf="@id/filterAddButton" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        app:layout_constraintTop_toBottomOf="@id/filterAddButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
