review, fixes, architecture update, en strings

--- a/core-ui/src/main/res/values/styles.xml
+++ b/core-ui/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
         <item name="android:colorBackground">@color/colorWhite</item>
         <item name="android:navigationBarColor">@color/colorWhite</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
 
         <item name="bottomSheetDialogTheme">@style/AppTheme.BottomSheetDialogTheme</item>
         <item name="bottomSheetStyle">@style/AppTheme.BottomSheetDialogTheme</item>
@@ -44,6 +45,7 @@
         <item name="android:colorBackground">@color/colorBlack</item>
         <item name="android:navigationBarColor">@color/colorBlack</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
 
         <item name="bottomSheetDialogTheme">@style/AppTheme.Dark.BottomSheetDialogTheme</item>
         <item name="bottomSheetStyle">@style/AppTheme.Dark.BottomSheetDialogTheme</item>
