--- a/feature-alarm-ui/src/main/res/layout/fragment_alarm.xml
+++ b/feature-alarm-ui/src/main/res/layout/fragment_alarm.xml
@@ -9,6 +9,7 @@
 
     <com.booleanull.core_ui.widget.PulseView
         android:id="@+id/pulseView"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
