--- a/feature-home-ui/src/main/res/layout/fragment_home_details.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home_details.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:theme="@style/AppTheme">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -141,18 +142,42 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/filterRecyclerView"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:alpha="0.5"
-                        android:clipChildren="false"
-                        android:orientation="vertical"
-                        android:overScrollMode="never"
-                        android:paddingBottom="144dp"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/cell_filter" />
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/filterAddButton"
+                            style="@style/AppTheme.Text.Description.H4"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:drawableStart="@drawable/ic_add"
+                            android:drawablePadding="4dp"
+                            android:gravity="center_vertical"
+                            android:padding="@dimen/default_margin"
+                            android:text="@string/add_filter"
+                            android:textStyle="bold" />
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="?attr/colorDivider" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/filterRecyclerView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:alpha="0.5"
+                            android:clipChildren="false"
+                            android:orientation="vertical"
+                            android:overScrollMode="never"
+                            android:paddingBottom="144dp"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/cell_filter" />
+
+                    </LinearLayout>
 
                     <FrameLayout
                         android:id="@+id/filterOverlapLayout"
@@ -167,7 +192,7 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -180,6 +205,6 @@
         android:visibility="invisible"
         app:backgroundTint="?attr/colorAccent"
         app:tint="?attr/colorPrimary"
-        tools:visibility="visible" />
+        tools:visibility="visible" />-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
