--- a/core-ui/src/main/res/values/styles.xml
+++ b/core-ui/src/main/res/values/styles.xml
@@ -66,7 +66,7 @@
     </style>
 
     <!-- Texts -->
-    <style name="AppTheme.Text"></style>
+    <style name="AppTheme.Text" />
 
     <!-- Texts Title -->
     <style name="AppTheme.Text.Title">
@@ -87,7 +87,7 @@
     </style>
 
     <!-- Text Description -->
-    <style name="AppTheme.Text.Description"></style>
+    <style name="AppTheme.Text.Description" />
 
     <style name="AppTheme.Text.Description.H3">
         <item name="android:textSize">16sp</item>
