--- a/core-ui/src/main/res/values/colors.xml
+++ b/core-ui/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorBlueGray">#546e7a</color>
+    <color name="colorBlueGrayLight">#90a4ae</color>
     <color name="colorGray">#E0E0E0</color>
     <color name="colorGraySecondary">#C0C0C0</color>
     <color name="colorGrayDark">#3F3F3F</color>
