--- a/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
@@ -65,6 +65,7 @@
         style="@style/AppTheme.MaterialButton"
         android:layout_width="match_parent"
         android:layout_height="@dimen/material_button_height"
+        android:enabled="false"
         android:text="@string/add"
         app:icon="@drawable/ic_add"
         app:iconGravity="textStart"
