--- a/core-ui/src/main/res/values/dimens.xml
+++ b/core-ui/src/main/res/values/dimens.xml
@@ -4,13 +4,14 @@
     <dimen name="default_radius">8dp</dimen>
 
     <dimen name="small_margin">8dp</dimen>
-    <dimen name="very_small_margin">8dp</dimen>
+    <dimen name="very_small_margin">4dp</dimen>
 
     <dimen name="large_margin">32dp</dimen>
 
     <dimen name="material_button_height">56dp</dimen>
     <dimen name="icon_cell_size">36dp</dimen>
-    <dimen name="icon_background_size">72dp</dimen>
+    <dimen name="small_icon_cell_size">16dp</dimen>
+    <dimen name="icon_background_size">16dp</dimen>
     <dimen name="bottom_sheet_bottom_view_width">64dp</dimen>
     <dimen name="bottom_sheet_bottom_space">64dp</dimen>
     <dimen name="edit_text_padding">10dp</dimen>
