--- a/feature-home-ui/src/main/res/layout/fragment_home_details.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home_details.xml
@@ -20,7 +20,7 @@
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
-                android:layout_height="184dp"
+                android:layout_height="182dp"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7">
 
@@ -192,19 +192,19 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/favoriteFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
         android:layout_marginStart="@dimen/default_margin"
         android:layout_marginTop="@dimen/default_margin"
         android:layout_marginEnd="@dimen/default_margin"
-        android:layout_marginBottom="62dp"
-        android:src="@drawable/ic_add"
-        android:visibility="invisible"
+        android:src="@drawable/ic_favorite_disabled"
+        app:elevation="10dp"
         app:backgroundTint="?attr/colorAccent"
-        app:tint="?attr/colorPrimary"
-        tools:visibility="visible" />-->
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|end"
+        app:tint="?attr/colorBackground"
+        tools:visibility="visible" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
