Add alarm attention, icons and some fixes

--- a/feature-home-ui/src/main/res/layout/cell_application.xml
+++ b/feature-home-ui/src/main/res/layout/cell_application.xml
@@ -28,6 +28,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:layout_marginEnd="@dimen/default_margin"
+        app:layout_goneMarginEnd="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/notifyImageView"
         app:layout_constraintStart_toEndOf="@id/iconImageView"
