--- a/feature-alarm-ui/src/main/res/layout/fragment_alarm.xml
+++ b/feature-alarm-ui/src/main/res/layout/fragment_alarm.xml
@@ -17,7 +17,7 @@
     <ImageView
         android:id="@+id/alarmImageView"
         android:layout_width="72dp"
-        android:layout_height="@dimen/icon_background_size"
+        android:layout_height="72dp"
         android:src="@drawable/shape_circle"
         android:tint="?attr/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
