--- a/feature-home-ui/src/main/res/layout/fragment_home.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home.xml
@@ -80,6 +80,34 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/attentionAlarmCardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_margin"
+            app:cardBackgroundColor="@color/colorBlueGray"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
+
+            <TextView
+                android:id="@+id/attentionAlarmTextView"
+                style="@style/AppTheme.Text.Description.H3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/default_margin"
+                android:drawableStart="@drawable/ic_notifications_off"
+                android:drawablePadding="@dimen/small_margin"
+                android:text="@string/attention_alarm"
+                android:textColor="@color/colorWhite" />
+
+        </androidx.cardview.widget.CardView>
+
+        <View
+            android:id="@+id/attentionAlarmDividerView"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?attr/colorDivider" />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
