Icons and fixes

--- a/feature-home-ui/src/main/res/menu/menu_home.xml
+++ b/feature-home-ui/src/main/res/menu/menu_home.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/search"
-        android:icon="@drawable/ic_search"
-        android:title="@string/search" />
+        android:id="@+id/more"
+        android:icon="@drawable/ic_more"
+        android:orderInCategory="1"
+        android:title="More"
+        app:showAsAction="always">
 
-    <item
-        android:id="@+id/settings"
-        android:icon="@drawable/ic_baseline_settings"
-        android:title="@string/settings" />
+        <menu>
+            <item
+                android:id="@+id/search"
+                android:icon="@drawable/ic_search"
+                android:title="@string/search" />
+
+            <item
+                android:id="@+id/settings"
+                android:icon="@drawable/ic_settings"
+                android:title="@string/settings" />
+        </menu>
+    </item>
 </menu>
