--- a/feature-home-ui/src/main/res/layout/fragment_home.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home.xml
@@ -85,6 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/default_margin"
+            android:visibility="gone"
             app:cardBackgroundColor="@color/colorBlueGray"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp">
