--- a/feature-onboarding-ui/src/main/res/layout/fragment_onboarding_item.xml
+++ b/feature-onboarding-ui/src/main/res/layout/fragment_onboarding_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,12 +8,21 @@
     android:orientation="vertical"
     android:padding="32dp">
 
+    <ImageView
+        android:id="@+id/iconImageView"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_notifications"
+        app:tint="?attr/colorAccent" />
+
     <TextView
         android:id="@+id/titleTextView"
         style="@style/AppTheme.Text.Title.H4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="@dimen/default_margin"
         android:gravity="center"
         tools:text="@string/app_name" />
 
