--- a/feature-home-ui/src/main/res/layout/fragment_home_details.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home_details.xml
@@ -200,11 +200,44 @@
         android:layout_marginTop="@dimen/default_margin"
         android:layout_marginEnd="@dimen/default_margin"
         android:src="@drawable/ic_favorite_disabled"
-        app:elevation="10dp"
         app:backgroundTint="?attr/colorAccent"
+        app:behavior_autoHide="false"
+        app:elevation="10dp"
+        app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|end"
         app:tint="?attr/colorBackground"
         tools:visibility="visible" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/countCardView"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginStart="@dimen/default_margin"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginEnd="@dimen/default_margin"
+        android:layout_marginBottom="@dimen/small_margin"
+        android:translationZ="6dp"
+        app:cardBackgroundColor="@color/colorBlueGray"
+        app:cardCornerRadius="56dp"
+        app:cardElevation="8dp"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|center">
+
+        <TextView
+            android:id="@+id/countTextView"
+            style="@style/AppTheme.Text.Title.H3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawableEnd="@drawable/ic_notifications"
+            android:drawablePadding="@dimen/very_small_margin"
+            android:gravity="center"
+            android:paddingStart="@dimen/default_margin"
+            android:paddingEnd="@dimen/default_margin"
+            android:text="8"
+            android:textColor="?attr/colorBackground" />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
