--- a/feature-onboarding-ui/src/main/res/layout/fragment_onboarding_item.xml
+++ b/feature-onboarding-ui/src/main/res/layout/fragment_onboarding_item.xml
@@ -1,39 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="32dp">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iconImageView"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_notifications"
-        app:tint="?attr/colorAccent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="32dp">
 
-    <TextView
-        android:id="@+id/titleTextView"
-        style="@style/AppTheme.Text.Title.H4"
+        <ImageView
+            android:id="@+id/iconImageView"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_notifications"
+            app:tint="?attr/colorAccent" />
+
+        <TextView
+            android:id="@+id/titleTextView"
+            style="@style/AppTheme.Text.Title.H4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/default_margin"
+            android:gravity="center"
+            tools:text="@string/app_name" />
+
+        <TextView
+            android:id="@+id/descriptionTextView"
+            style="@style/AppTheme.Text.Description.H4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/default_margin"
+            android:gravity="center"
+            tools:text="@string/app_name" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/default_margin"
-        android:gravity="center"
-        tools:text="@string/app_name" />
+        android:layout_gravity="bottom"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/descriptionTextView"
-        style="@style/AppTheme.Text.Description.H4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/default_margin"
-        android:gravity="center"
-        tools:text="@string/app_name" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/errorTextView"
+            style="@style/AppTheme.Text.Error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/default_margin"
+            android:layout_marginEnd="@dimen/default_margin"
+            android:visibility="invisible"
+            tools:visibility="visible" />
 
-</LinearLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/nextButton"
+            style="@style/AppTheme.MaterialButton"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/material_button_height"
+            android:layout_gravity="bottom"
+            android:text="@string/take_permission" />
+    </LinearLayout>
+</FrameLayout>
