--- a/feature-alarm-ui/src/main/res/layout/fragment_alarm.xml
+++ b/feature-alarm-ui/src/main/res/layout/fragment_alarm.xml
@@ -29,7 +29,7 @@
         android:layout_width="@dimen/icon_cell_size"
         android:layout_height="@dimen/icon_cell_size"
         android:layout_gravity="center"
-        android:src="@drawable/ic_baseline_alarm"
+        android:src="@drawable/ic_alarm"
         android:tint="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
